save current status@Jul. 1 22:06

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ VITE_SERVER_URL=/
 VITE_APP_I18N_CONFIG_KEY=i18nConfig
 VITE_SUPABASE_URL=
 VITE_SUPABASE_ANON_KEY=
+VITE_ADMIN_USER_EMAIL=
+VITE_ADMIN_USER_PASS=
